# Projektmunka_IV

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.yaml
data/: household_power_sample.csv
infra/: Caddyfile
scripts/: download_real_data.py  eval_models.py  fetch_weather.py  generate_demo_data.py  prepare_data.py  train_baseline.py  train_patchtst.py
src/energy_app/: __init__.py  __main__.py  config.py
src/energy_app/agent/: agent.py  prompts.py  tools.py
src/energy_app/data/: features.py  loader.py  preprocess.py  windows.py
src/energy_app/eval/: evaluator.py  reporting.py
src/energy_app/models/: base.py  baseline.py  granite_ttm.py  metrics.py  patchtst.py
src/energy_app/storage/: db.py  profile_repo.py  schema.sql
src/energy_app/weather/: cache.py  client.py  features.py
src/energy_app/webapp/: app.py  state.py  ui.py
tests/: conftest.py  test_data.py  test_profile_repo.py  test_weather_cache.py
