[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-app"
version = "0.1.0"
description = "Energy consumption forecasting and recommendations"
authors = [{name = "Projektmunka IV Team"}]
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
